Revert "UI is not displaying changes for autotester & accrual fix"
